--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,77 +1,84 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
-<hr />
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+  <%= f.error_notification %>
 
-  
-  <div class="form-group">
-    <%= f.label :role %>
-    <% if current_user.try(:admin?) %>
-      <%= f.select(:role, User.roles.keys.map {|role| [role.titleize,role]}, {}, { :class => "form-control" }) %>
-    <% else %>
-      <%= f.select(:role, User.roles.keys.map {|role| [role.titleize,role]}, {}, { :disabled => true, :class => "form-control" }) %>
-    <% end %>
-  </div>
-  
-
-  <div class="form-group">
-    <%= f.label :email %>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", :class => "form-control" %>
-  </div>
-  
-  <div class="form-group">
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name, :class => "form-control" %>
-  </div>
-  
-  <div class="form-group">
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name, :class => "form-control" %>
-  </div>
-  
-  <% if current_user.try(:provider?) %>
+  <div class="form-inputs">
     <div class="form-group">
-      <%= f.label "Date of Birth" %>
-      <%= f.date_field :dob, :class => "form-control" %>
+      <%= f.label :role %>
+      <% if current_user.try(:admin?) %>
+        <%= f.select(:role, User.roles.keys.map {|role| [role.titleize,role]}, {}, { :class => "form-control" }) %>
+      <% else %>
+        <%= f.select(:role, User.roles.keys.map {|role| [role.titleize,role]}, {}, { :disabled => true, :class => "form-control" }) %>
+      <% end %>
     </div>
     
     <div class="form-group">
-      <%= f.label "Date of Hire" %>
-      <%= f.date_field :doh, :class => "form-control" %>
+      <%= f.label :email %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", :class => "form-control" %>
     </div>
-  <% end %>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="form-group">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i>
-    <%= f.password_field :password, autocomplete: "new-password", :class => "form-control" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+    
+    <div class="form-group">
+      <%= f.label :first_name %>
+      <%= f.text_field :first_name, :class => "form-control" %>
+    </div>
+    
+    <div class="form-group">
+      <%= f.label :last_name %>
+      <%= f.text_field :last_name, :class => "form-control" %>
+    </div>
+    
+    <% if current_user.try(:provider?) %>
+      <div class="form-group">
+        <%= f.label "Date of Birth" %>
+        <%= f.date_field :dob, :class => "form-control" %>
+      </div>
+      
+      <div class="form-group">
+        <%= f.label "Date of Hire" %>
+        <%= f.date_field :doh, :class => "form-control" %>
+      </div>
+      
+      <div class="form-group">
+        <%= f.label :address %>
+        <%= f.text_field :address, :class => "form-control" %>
+      </div>
+      
+      <div class="form-group">
+        <%= f.label :city %>
+        <%= f.text_field :city, :class => "form-control" %>
+      </div>
+      
+      <div class="form-group">
+        <%= f.label "Zip Code" %>
+        <%= f.text_field :zip_code, :class => "form-control" %>
+      </div>
     <% end %>
+
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+    <% end %>
+
+    <%= f.input :password,
+                hint: "leave it blank if you don't want to change it",
+                required: false,
+                input_html: { autocomplete: "new-password" }, :class => "form-control" %>
+    <%= f.input :password_confirmation,
+                required: false,
+                input_html: { autocomplete: "new-password" }, :class => "form-control" %>
+    <%= f.input :current_password,
+                hint: "we need your current password to confirm your changes",
+                required: true,
+                input_html: { autocomplete: "current-password" }, :class => "form-control" %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", :class => "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i>
-    <%= f.password_field :current_password, autocomplete: "current-password", :class => "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.submit "Update", :class => "form-control btn btn-dark" %>
+  <div class="form-groups">
+    <%= f.button :submit, "Update", :class => "btn btn-dark form-control" %>
   </div>
 <% end %>
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, :class => "form-control btn btn-danger" %></p>
+<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, :class => "btn btn-danger form-control" %></p>
 
 <%= link_to "Back", :back, :class => "btn btn-link" %>
